fix: Fix display bug on Firefox Android
- Wraps parts of the quotes in the hero images on 'session' and
'contact' pages with `white-space: nowrap;` to avoid display bug on
Firefox Android and DuckDuckGo Android
- Fixes some typos on contact page

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,238 +1,240 @@
 body {
-    font-family: "Montserrat", Verdana, sans-serif;
-    font-size: 22px;
+  font-family: "Montserrat", Verdana, sans-serif;
+  font-size: 22px;
 }
 
 @media only screen and (max-width: 575.98px) {
-    .blockPic {
-        width: 92vw;
-        display: block;
-    }
+  .blockPic {
+    width: 92vw;
+    display: block;
+  }
 }
 
 .brand-container {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .brand-image {
-    width: 40px;
-    height: 40px;
+  width: 40px;
+  height: 40px;
 }
 
 .brand-small {
-    font-size: 14px;
+  font-size: 14px;
 }
 
 .brand-text {
-    font-size: 20px;
-    font-weight: 700;
-    line-height: 1.1;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 1.1;
 
-    margin-left: 1rem;
+  margin-left: 1rem;
 }
 
 @media only screen and (max-width: 810px) and (min-width: 576px) {
-    .brand-text {
-        display: none;
-    }
+  .brand-text {
+    display: none;
+  }
 }
 
 @media only screen and (max-width: 575.98px) {
-    .brand-text {
-        font-size: 16px;
-    }
+  .brand-text {
+    font-size: 16px;
+  }
 }
 
 .carousel-control-prev-icon {
-    width: 25px;
-    height: 25px;
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%2300334d' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e");
+  width: 25px;
+  height: 25px;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%2300334d' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e");
 }
- 
+
 .carousel-control-next-icon {
-    width: 25px;
-    height: 25px;
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%2300334d' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e");
+  width: 25px;
+  height: 25px;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%2300334d' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e");
 }
 
 .carousel-indicators li {
-    width: 16px;
-    height: 16px;
-    margin-left: 5px;
-    margin-right: 5px;
-    background-color: #00334d;
-    border-radius: 50%;
+  width: 16px;
+  height: 16px;
+  margin-left: 5px;
+  margin-right: 5px;
+  background-color: #00334d;
+  border-radius: 50%;
 }
 
-.carousel-item .card{
-    min-height: 400px;
-    align-content: center;
+.carousel-item .card {
+  min-height: 400px;
+  align-content: center;
 }
 
 footer {
-    font-size: 18px;
+  font-size: 18px;
 }
 
 .footerlink {
-    font-size: 16px;
-    color: #212529;
+  font-size: 16px;
+  color: #212529;
 }
 
 .form-group {
-    position: relative;
+  position: relative;
 }
 
 .handwriting {
-    font-family: "Dancing Script", Verdana, sans-serif;
+  font-family: "Dancing Script", Verdana, sans-serif;
 }
 
 .heading {
-    font-size: 56px;
+  font-size: 56px;
 }
 
 @media only screen and (max-width: 575.98px) {
-    .heading {
-        font-size: 40px;
-    }
+  .heading {
+    font-size: 40px;
+  }
 }
 
 .headline {
-    position: absolute;
-    left: 36vw;
-    top: 20%;
+  position: absolute;
+  left: 36vw;
+  top: 20%;
 
-    font-family: "Dancing Script", Verdana, sans-serif;
-    font-size: 5vw;
+  font-family: "Dancing Script", Verdana, sans-serif;
+  font-size: 5vw;
 }
 
 .headline-de {
-    position: absolute;
-    left: 35vw;
-    top: 31%;
+  position: absolute;
+  left: 35vw;
+  top: 31%;
 
-    font-family: "Dancing Script", Verdana, sans-serif;
+  font-family: "Dancing Script", Verdana, sans-serif;
+  font-size: 4vw;
+}
+
+@media only screen and (max-width: 991.98px) {
+  .headline-de {
+    top: 33%;
+
     font-size: 4vw;
+  }
 }
 
 @media only screen and (max-width: 991.98px) {
-    .headline-de {
-        top: 33%;
+  .headline {
+    top: 30%;
 
-        font-size: 4vw;
-    }
-}
-
-@media only screen and (max-width: 991.98px) {
-    .headline {
-        top: 30%;
-
-        font-size: 6vw;
-    }
+    font-size: 6vw;
+  }
 }
 
 @media only screen and (max-width: 575.98px) {
-    .headline {
-        display: none;
-    }
+  .headline {
+    display: none;
+  }
 }
 
 @media only screen and (max-width: 575.98px) {
-    .headline-de {
-        display: none;
-    }
+  .headline-de {
+    display: none;
+  }
 }
 
 picture {
-    z-index:-1;
+  z-index: -1;
 }
 
 .navbar {
-    background-color: inherit;
+  background-color: inherit;
 }
 
 .picbox {
-    background-color:gainsboro;
-    width: 100vw;
-    height: 37.5vw;
-    z-index: -1;
+  background-color: gainsboro;
+  width: 100vw;
+  height: 37.5vw;
+  z-index: -1;
 }
 
 @media only screen and (max-width: 991.98px) {
-    .picbox {
-        height: 66vw;
-    }
+  .picbox {
+    height: 66vw;
+  }
 }
 
 .quote-large {
-    position: absolute;
-    top: 52%;
-    left: 35vw;
-    right: 15vw;
+  position: absolute;
+  top: 52%;
+  left: 35vw;
+  right: 15vw;
 
-    text-align: center;
+  text-align: center;
 
-    color: lavenderblush;
+  color: lavenderblush;
 
-    font-family: "Dancing Script", Verdana, sans-serif;
-    font-size: 3.7vw;
-    line-height: 1.8;
+  font-family: "Dancing Script", Verdana, sans-serif;
+  font-size: 3.7vw;
+  line-height: 1.8;
 }
 
 @media only screen and (min-width: 576px) and (max-width: 991.98px) {
-    .quote-large {
-        top: 59%;
-        left: 42vw;
-        right: 2vw;
+  .quote-large {
+    top: 59%;
+    left: 42vw;
+    right: 2vw;
 
-        font-size: 6vw;
-    }
+    font-size: 6vw;
+  }
 }
 
 @media only screen and (max-width: 575.98px) {
-    .quote-large {
-        top: 59%;
-        left: 40vw;
-        right: 1vw;
+  .quote-large {
+    top: 59%;
+    left: 40vw;
+    right: 1vw;
 
-        font-size: 6vw;
-    }
+    font-size: 6vw;
+  }
 }
 
 .quote2 {
-    position: absolute;
-    top: 6%;
-    left: 30vw;
-    right: 35vw;
+  position: absolute;
+  top: 6%;
+  left: 30vw;
+  right: 35vw;
 
-    text-align: center;
+  text-align: center;
 
-    color: black;
+  color: black;
 
-    font-family: "Dancing Script", Verdana, sans-serif;
-    font-size: 3.7vw;
-    line-height: 1.8;
+  font-family: "Dancing Script", Verdana, sans-serif;
+  font-size: 3.7vw;
+  line-height: 1.8;
 }
 
 @media only screen and (max-width: 991.98px) {
-    .quote2 {
+  .quote2 {
+    color: white;
+    top: 76%;
+    left: 1vw;
+    right: 1vw;
 
-        color: white;
-        top: 76%;
-        left: 1vw;
-        right: 1vw;
-
-        font-size: 6.8vw;
-        line-height: 1.4;
-    }
+    font-size: 6.8vw;
+    line-height: 1.4;
+  }
+  .quote2 > span {
+    white-space: nowrap;
+  }
 }
 
 @media only screen and (max-width: 991.98px) {
-    .rosen-de {
-        font-size: 26px;
-    }
+  .rosen-de {
+    font-size: 26px;
+  }
 }
 
 .text-box {
-    background-color: #ffe0b3 !important;
+  background-color: #ffe0b3 !important;
 }
